swagger docs for post on user /admins and /drivers
