# src/routes/user/user.routes.ts
@@ -13,7 +13,7 @@ export const userRoutes = () => {
   /**
    * @swagger
    * /user:
-   *  post:
+   *  get:
    *    summary: Get all users
    *    description: "Get all users, only admin can access this route"
    *    tags:
@@ -36,6 +36,26 @@ export const userRoutes = () => {
     }
   });
 
+  /**
+   * @swagger
+   * /user/drivers:
+   *  post:
+   *    summary: Add driver user
+   *    description: "Add a driver to a freight company"
+   *    tags:
+   *      - Users
+   *    consumes: application/json
+   *    requestBody:
+   *      content:
+   *        $ref: '#/components/requestBodies/Driver'
+   *    responses:
+   *      200:
+   *        $ref: '#/components/responses/SingleUser'
+   *      400:
+   *        $ref: '#/components/responses/BadRequestError'
+   *      401:
+   *        $ref: '#/components/responses/UnauthorizedError'
+   */
   router.post(
     '/drivers',
     isAuth,
@@ -51,6 +71,27 @@ export const userRoutes = () => {
       }
     }
   );
+
+  /**
+   * @swagger
+   * /user/admins:
+   *  post:
+   *    summary: Add admin user
+   *    description: "Add a admin user, freight company ID is optional"
+   *    tags:
+   *      - Users
+   *    consumes: application/json
+   *    requestBody:
+   *      content:
+   *        $ref: '#/components/requestBodies/Admin'
+   *    responses:
+   *      200:
+   *        $ref: '#/components/responses/SingleUser'
+   *      400:
+   *        $ref: '#/components/responses/BadRequestError'
+   *      401:
+   *        $ref: '#/components/responses/UnauthorizedError'
+   */
   router.post(
     '/admins',
     isAuth,
